kube/home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    version: "1.0"
    app: home-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-deployment
  template:
    metadata:
      labels:
        app: home-deployment
    spec:
      containers:
      - name: home
        image: jamesmthorne/home:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 5
          timeoutSeconds: 5
        resources:
          limits:
            memory: 100Mi
            cpu: 100Mi
          requests:
            memory: 100Mi
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: home-deployment
