kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  selector:
    app: home-deployment
