kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: "false"
spec:
  tls:
    - hosts:
        - api.thorne.nz
      secretName: app-web-cert
  rules:
    - host: api.thorne.nz
      http:
        paths:
          - path: /
            backend:
              serviceName: home-service
              servicePort: 8080
          - path: /v1/graphql
            backend:
              serviceName: hasura
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-ingress-local
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: api.192.168.3.254.nip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: home-service
              servicePort: 8080
          - path: /v1/graphql
            backend:
              serviceName: hasura
              servicePort: 80
